--- a/meson_options.txt
+++ b/meson_options.txt
@@ -44,6 +44,8 @@ option('plugin-script', type: 'feature', value: 'auto',
        description: 'Script support')
 option('plugin-sway-xkb', type: 'feature', value: 'auto',
        description: 'keyboard support for Sway')
+option('plugin-tray', type: 'feature', value: 'auto',
+       description: 'Tray support')
 option('plugin-xkb', type: 'feature', value: 'auto',
        description: 'keyboard support for X11')
 option('plugin-xwindow', type: 'feature', value: 'auto',
